--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,7 @@
 
 #bgcol {
     background-color: rgba(0, 0, 0, 0.8);
-    height: 82vw;
+    height: auto;
 }
 
 #contain {
@@ -56,7 +56,7 @@
     /* https://images.pexels.com/photos/9726015/pexels-photo-9726015.jpeg */
     background-repeat: inherit;
     background-size: cover;
-    height: 82vw;
+    height: auto;
     /* position: fixed; */
     /* width: 100vw; */
     /* bottom: 10%; */
@@ -98,8 +98,9 @@
 }
 
 html::-webkit-scrollbar {
-    width: 0.3vw;
+    width: 0.5vw;
     scroll-behavior: smooth;
+    border-radius: 50px;
 }
 
 html::-webkit-scrollbar:hover {
@@ -107,11 +108,13 @@ html::-webkit-scrollbar:hover {
 }
 
 html::-webkit-scrollbar-thumb {
-    background-color: rgb(255, 255, 255);
+    background-color: rgba(0, 0, 0, 0.7);
+    border-radius: 50px;
 }
 
 html::-webkit-scrollbar-track {
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(255, 255, 255, 0.1);
+    border-radius: 50px;
 }
 
 html::-webkit-scrollbar-thumb:hover {
@@ -123,21 +126,23 @@ html::-webkit-scrollbar-track:hover {
 }
 
 .cardcont::-webkit-scrollbar {
-    width: 0.3vw;
+    width: 0.32vw;
     margin-left: 10px;
     scroll-behavior: smooth;
 }
 
 .cardcont::-webkit-scrollbar-button {
-    border-radius: 50px;
+    border-radius: 500px;
 }
 
 .cardcont::-webkit-scrollbar-thumb {
-    background-color: rgb(255, 255, 255);
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 50px;
 }
 
 .cardcont::-webkit-scrollbar-track {
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0);
+    border-radius: 50px;
 }
 
 .cardcont::-webkit-scrollbar-thumb:hover {
@@ -164,4 +169,51 @@ html::-webkit-scrollbar-track:hover {
 .anchver {
     color: rgba(0, 0, 0, 0.6);
     text-decoration: none;
+}
+.prodcont{
+    overflow-y: scroll !important ;
+}
+.prodcont::-webkit-scrollbar {
+    border-radius: 50px;
+    
+    width: 0.4vw;
+    height: auto;
+    background-color: rgba(255, 255, 255, 0);
+    /* margin-right: 1px; */
+    overflow-y: scroll !important ;
+
+    scroll-behavior: smooth;
+}
+
+.prodcont::-webkit-scrollbar-button {
+    border-radius: 50px;
+    overflow-y: scroll !important ;
+    border-radius: 50px;
+
+}
+
+.prodcont::-webkit-scrollbar-thumb {
+    background-color: rgba(0, 0, 0, 0.5);
+    overflow-y: scroll !important ;
+    border-radius: 50px;
+
+}
+
+.prodcont::-webkit-scrollbar-track {
+    background-color: rgba(0, 0, 0, 0);
+    overflow-y: scroll !important ;
+    border-radius: 50px;
+
+    
+}
+
+.prodcont::-webkit-scrollbar-thumb:hover {
+    background-color: rgba(0, 0, 0, 0.9);
+
+
+}
+
+.prodcont::-webkit-scrollbar-track:hover {
+    background-color: rgba(0, 0, 0, 0.5);
+
 }
